New XGB hyperparameters search

--- a/notebooks/models/interaction_forces/XGB/XGB_hs_results_analysis.ipynb
+++ b/notebooks/models/interaction_forces/XGB/XGB_hs_results_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "indian-patient",
+   "id": "royal-responsibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-loading",
+   "id": "british-communications",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "closed-retailer",
+   "id": "precious-array",
    "metadata": {},
    "outputs": [
     {
@@ -46,11 +46,11 @@
     "N_CELLS = 8\n",
     "\n",
     "# Path where the results are stored\n",
-    "RESULTS_PATH = '../../../results'\n",
+    "RESULTS_PATH = '../../../../results'\n",
     "# ID of the training and test data resulting from this notebook, stored in RESULTS_PATH\n",
-    "DATA_ID = '0004_15042021'\n",
+    "DATA_ID = '0005_19042021'\n",
     "# Hyperparameters search date\n",
-    "HS_DATE = '15042021'\n",
+    "HS_DATE = '19042021'\n",
     "# Number of folds in cross-validation\n",
     "CV = 6\n",
     "\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-breast",
+   "id": "handled-romantic",
    "metadata": {},
    "source": [
     "## Hyperparameters seach analysis"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "certain-pride",
+   "id": "ultimate-object",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "monthly-selling",
+   "id": "virgin-lexington",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "several-letter",
+   "id": "capable-leather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "pleased-incidence",
+   "id": "designing-harvey",
    "metadata": {},
    "outputs": [
     {
@@ -3087,7 +3087,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "complimentary-incentive",
+   "id": "unlike-brook",
    "metadata": {},
    "outputs": [
     {
@@ -3106,7 +3106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepted-despite",
+   "id": "electric-daily",
    "metadata": {},
    "source": [
     "## Best model"
@@ -3115,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ancient-specification",
+   "id": "smooth-welcome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3129,7 +3129,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "olive-boston",
+   "id": "thermal-russian",
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3173,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "devoted-knight",
+   "id": "awful-xerox",
    "metadata": {},
    "outputs": [
     {
@@ -3222,7 +3222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twelve-plastic",
+   "id": "private-relationship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3248,7 +3248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "steady-wonder",
+   "id": "driving-blake",
    "metadata": {},
    "outputs": [],
    "source": []
