--- a/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
@@ -69,9 +69,9 @@
     "N_CELLS = 8\n",
     "\n",
     "# Path where the results are stored\n",
-    "RESULTS_PATH = '../../../results'\n",
+    "RESULTS_PATH = '../../../../results'\n",
     "# ID of the training and test data resulting from this notebook, stored in RESULTS_PATH\n",
-    "DATA_ID = '0004_15042021'\n",
+    "DATA_ID = '0005_19042021'\n",
     "# Number of folds for cross-validation\n",
     "CV = 6\n",
     "\n",
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Hyperparameters search date\n",
-    "hs_date = '15042021'\n",
+    "hs_date = '19042021'\n",
     "\n",
     "# Parameters grid\n",
     "param_grid = {\n",
