Change XGB params grid and validation vars name

--- a/notebooks/models/interaction_forces/RF/RF_hs_results_analysis.ipynb
+++ b/notebooks/models/interaction_forces/RF/RF_hs_results_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "honest-romania",
+   "id": "impressive-cartridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-cover",
+   "id": "planned-quick",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "built-husband",
+   "id": "optical-corruption",
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +45,8 @@
     "N_CELLS = 8\n",
     "\n",
     "# Path where the results are stored\n",
-    "RESULTS_PATH = '../../../results'\n",
-    "# ID of the training and test data resulting from this notebook, stored in RESULTS_PATH\n",
+    "RESULTS_PATH = '../../../../results'\n",
+    "# ID of the training and validation data resulting from this notebook, stored in RESULTS_PATH\n",
     "DATA_ID = '0003_11042021'\n",
     "# Hyperparameters search date\n",
     "HS_DATE = '12042021'\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "still-traveler",
+   "id": "burning-creek",
    "metadata": {},
    "source": [
     "## Hyperparameters seach analysis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "empty-lawrence",
+   "id": "numerous-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "modern-engineer",
+   "id": "fabulous-cuisine",
    "metadata": {},
    "outputs": [
     {
@@ -1498,12 +1498,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "artistic-property",
+   "id": "interested-combine",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sum up the scores by force axis in only one sortable score\n",
-    "for subset in ['Train', 'Test']:\n",
+    "for subset in ['Train', 'Valid']:\n",
     "    for loss in ['MAE', 'MSE', 'R2']:\n",
     "        results_df[subset + '_' + loss] = results_df[[subset + '_' + force + '_' + loss + '_mean__mean' for force in ['Fx', 'Fy', 'Fz']]].mean(axis=1)"
    ]
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "lasting-bachelor",
+   "id": "recent-ethics",
    "metadata": {},
    "outputs": [
     {
@@ -2983,14 +2983,14 @@
    ],
    "source": [
     "# Sort the dataframe by the most relevant score\n",
-    "results_df = results_df.sort_values(['Test_R2'], ascending=False)\n",
+    "results_df = results_df.sort_values(['Valid_R2'], ascending=False)\n",
     "results_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sacred-intro",
+   "id": "cellular-waters",
    "metadata": {},
    "outputs": [
     {
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cubic-accent",
+   "id": "intellectual-surgery",
    "metadata": {},
    "source": [
     "## Best model"
@@ -3018,7 +3018,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "temporal-catalyst",
+   "id": "handy-usage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3032,7 +3032,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dated-anderson",
+   "id": "raising-determination",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "artistic-porcelain",
+   "id": "herbal-orbit",
    "metadata": {},
    "outputs": [
     {
@@ -3146,7 +3146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distant-intermediate",
+   "id": "intellectual-economics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3172,7 +3172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outdoor-stevens",
+   "id": "visible-geneva",
    "metadata": {},
    "outputs": [],
    "source": []
