--- a/notebooks/models/interaction_forces/RF/RF_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/RF/RF_hyperparameters_search.ipynb
@@ -71,8 +71,8 @@
     "N_CELLS = 8\n",
     "\n",
     "# Path where the results are stored\n",
-    "RESULTS_PATH = '../../../results'\n",
-    "# ID of the training and test data resulting from this notebook, stored in RESULTS_PATH\n",
+    "RESULTS_PATH = '../../../../results'\n",
+    "# ID of the training and validation data resulting from this notebook, stored in RESULTS_PATH\n",
     "DATA_ID = '0003_11042021'\n",
     "# Number of folds for cross-validation\n",
     "CV = 6\n",
@@ -125,9 +125,9 @@
     "        \n",
     "        # Load data\n",
     "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        X_test = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
     "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_test = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
     "        \n",
     "        # Setup the model\n",
     "        model = RandomForestRegressor(**params, random_state=0, n_jobs=-1, verbose=0)\n",
@@ -141,7 +141,7 @@
     "        \n",
     "        # Get the scores\n",
     "        train_preds = model.predict(X_train)\n",
-    "        test_preds = model.predict(X_test)\n",
+    "        valid_preds = model.predict(X_valid)\n",
     "\n",
     "        results = {\n",
     "            'Train': {\n",
@@ -149,15 +149,15 @@
     "                'MSE': mean_squared_error(Y_train, train_preds, multioutput='raw_values'),\n",
     "                'R2': r2_score(Y_train, train_preds, multioutput='raw_values')\n",
     "            },\n",
-    "            'Test': {\n",
-    "                'MAE': mean_absolute_error(Y_test, test_preds, multioutput='raw_values'),\n",
-    "                'MSE': mean_squared_error(Y_test, test_preds, multioutput='raw_values'),\n",
-    "                'R2': r2_score(Y_test, test_preds, multioutput='raw_values')\n",
+    "            'Valid': {\n",
+    "                'MAE': mean_absolute_error(Y_valid, valid_preds, multioutput='raw_values'),\n",
+    "                'MSE': mean_squared_error(Y_valid, valid_preds, multioutput='raw_values'),\n",
+    "                'R2': r2_score(Y_valid, valid_preds, multioutput='raw_values')\n",
     "            }       \n",
     "\n",
     "        }\n",
     "        \n",
-    "        for subset in ['Train', 'Test']:\n",
+    "        for subset in ['Train', 'Valid']:\n",
     "            for f, force in enumerate(['Fx', 'Fy', 'Fz']):\n",
     "                for loss in ['MAE', 'MSE', 'R2']:\n",
     "                    scores = [results[subset][loss][i + f] for i in range(0, N_CELLS * 3, 3)]\n",
