--- a/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/XGB/XGB_hyperparameters_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "gisSEwlud_Yn"
    },
@@ -25,20 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.utils.io.Tee at 0x7fe9778f5d00>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.utils.io import Tee\n",
     "\n",
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +59,7 @@
     "\n",
     "# Path where the results are stored\n",
     "RESULTS_PATH = '../../../../results'\n",
-    "# ID of the training and test data resulting from this notebook, stored in RESULTS_PATH\n",
+    "# ID of the training and validation data resulting from this notebook, stored in RESULTS_PATH\n",
     "DATA_ID = '0005_19042021'\n",
     "# Number of folds for cross-validation\n",
     "CV = 6\n",
@@ -82,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest hyperparameters search"
+    "## XGBoost hyperparameters search"
    ]
   },
   {
@@ -92,17 +81,17 @@
    "outputs": [],
    "source": [
     "# Hyperparameters search date\n",
-    "hs_date = '19042021'\n",
+    "hs_date = '20042021'\n",
     "\n",
     "# Parameters grid\n",
     "param_grid = {\n",
     "    'objective': ['reg:squarederror'],\n",
     "    'booster': ['gbtree'], \n",
-    "    'eta': [0.2, 0.3, 0.4], \n",
-    "    'gamma': [0.1, 0.05, 0.01], \n",
+    "    'eta': [0.3, 0.4, 0.5], \n",
+    "    'gamma': [0.05, 0.01, 0.005], \n",
     "    'subsample': [0.5, 0.75, 1],\n",
-    "    'max_depth': [4, 6, 10, 12, 15, 30],\n",
-    "    'lambda': [0.8, 1, 1.2],\n",
+    "    'max_depth': [3, 4, 5, 6, 7, 8],\n",
+    "    'lambda': [0, 1, 2],\n",
     "    'nthread': [8],\n",
     "    'seed': [0]\n",
     "}\n",
@@ -125,37 +114,37 @@
     "        \n",
     "        # Load data\n",
     "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        X_test = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
     "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_test = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
     "        \n",
     "        results = defaultdict(list)\n",
     "        tr_time = []\n",
     "        for target in range(Y_train.shape[1]):\n",
     "\n",
     "            dtrain = xgb.DMatrix(data=X_train, label=Y_train[:, target])\n",
-    "            dtest = xgb.DMatrix(data=X_test, label=Y_test[:, target])\n",
+    "            dvalid = xgb.DMatrix(data=X_valid, label=Y_valid[:, target])\n",
     "\n",
     "            callbacks = [xgb.callback.EarlyStopping(rounds=5, metric_name='rmse', maximize=False, save_best=True)]\n",
     "\n",
     "            t_start = time.time()\n",
-    "            model = xgb.train(params, dtrain, evals=[(dtest, 'rmse')], callbacks=callbacks, verbose_eval=False)\n",
+    "            model = xgb.train(params, dtrain, evals=[(dvalid, 'rmse')], callbacks=callbacks, verbose_eval=False)\n",
     "            tr_time.append(time.time() - t_start)\n",
     "\n",
     "            train_preds = model.predict(dtrain)\n",
-    "            test_preds = model.predict(dtest)\n",
+    "            valid_preds = model.predict(dvalid)\n",
     "\n",
     "            results['Train_MAE'].append(mean_absolute_error(Y_train[:, target], train_preds))\n",
     "            results['Train_MSE'].append(mean_squared_error(Y_train[:, target], train_preds))\n",
     "            results['Train_R2'].append(r2_score(Y_train[:, target], train_preds))\n",
-    "            results['Test_MAE'].append(mean_absolute_error(Y_test[:, target], test_preds))\n",
-    "            results['Test_MSE'].append(mean_squared_error(Y_test[:, target], test_preds))\n",
-    "            results['Test_R2'].append(r2_score(Y_test[:, target], test_preds))\n",
+    "            results['Valid_MAE'].append(mean_absolute_error(Y_valid[:, target], valid_preds))\n",
+    "            results['Valid_MSE'].append(mean_squared_error(Y_valid[:, target], valid_preds))\n",
+    "            results['Valid_R2'].append(r2_score(Y_valid[:, target], valid_preds))\n",
     "\n",
     "        cv_results['fit_time'].append(sum(tr_time))\n",
     "        print('Training time: {:.4f}'.format(cv_results['fit_time'][-1]))\n",
     "\n",
-    "        for subset in ['Train', 'Test']:\n",
+    "        for subset in ['Train', 'Valid']:\n",
     "            for f, force in enumerate(['Fx', 'Fy', 'Fz']):\n",
     "                for loss in ['MAE', 'MSE', 'R2']:\n",
     "                    scores = [results['_'.join([subset, loss])][i + f] for i in range(0, N_CELLS * 3, 3)]\n",
