Add docstring to compute_time_shift function

--- a/notebooks/aux/leg_data_aligment.ipynb
+++ b/notebooks/aux/leg_data_aligment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "academic-simple",
+   "id": "golden-drain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "worthy-belize",
+   "id": "golden-winner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "empirical-therapy",
+   "id": "traditional-programming",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "subject-fancy",
+   "id": "accredited-packaging",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-grocery",
+   "id": "smaller-documentary",
    "metadata": {},
    "source": [
     "## Based on time-shift parameter"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dangerous-cheat",
+   "id": "dangerous-whole",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "severe-pierce",
+   "id": "senior-laser",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "modular-health",
+   "id": "spectacular-vancouver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "vanilla-royal",
+   "id": "center-remark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "clean-intervention",
+   "id": "outstanding-regulation",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "naughty-float",
+   "id": "remarkable-jefferson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cellular-defendant",
+   "id": "packed-handbook",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surrounded-standing",
+   "id": "final-waterproof",
    "metadata": {},
    "source": [
     "## Based on the difference between maxima"
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "civic-lancaster",
+   "id": "bacterial-catholic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "objective-picture",
+   "id": "extreme-former",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "distinguished-breakdown",
+   "id": "adult-sentence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "secret-stream",
+   "id": "discrete-bubble",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "functioning-seating",
+   "id": "worst-scoop",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "willing-michael",
+   "id": "healthy-hypothetical",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "backed-oxford",
+   "id": "reverse-gossip",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "diagnostic-training",
+   "id": "nearby-walter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "israeli-bearing",
+   "id": "level-rugby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "varied-channels",
+   "id": "experienced-highland",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "unexpected-thanksgiving",
+   "id": "pressing-italian",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "exciting-backing",
+   "id": "removed-period",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dirty-sherman",
+   "id": "forced-traffic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "underlying-healing",
+   "id": "stuffed-verification",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "roman-review",
+   "id": "opposed-swedish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "knowing-deficit",
+   "id": "several-vampire",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "remarkable-manor",
+   "id": "periodic-weekly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,18 +736,19 @@
     "\n",
     "def compute_time_shift(exo_knee_pos, leg_knee_pos, data_res=0.01, window_size=51, pol_order=3, threshold=30, max_time_shift=10):\n",
     "    '''\n",
+    "    Find the time shift between the exo knee position and the robotic leg knee position based on the local maximas\n",
     "    \n",
     "    Args:\n",
-    "    - exo_knee_pos (np.array):\n",
-    "    - leg_knee_pos (np.array):\n",
-    "    - data_res (float) [default = 0.01]:\n",
-    "    - window_size (int) [default = 51]:\n",
-    "    - pol_order (int) [default = 3]:\n",
-    "    - threshold (int) [default = 30]:\n",
-    "    - max_time_shift (int) [default = 10]:\n",
+    "    - exo_knee_pos (np.array): Exoeskeleton knee position signal.\n",
+    "    - leg_knee_pos (np.array): Robotic leg knee position signal.\n",
+    "    - data_res (float) [default = 0.01]: Time resolution of the data (0.01 = 100Hz)\n",
+    "    - window_size (int) [default = 51]: Window size to smooth the signals with savgol filter\n",
+    "    - pol_order (int) [default = 3]: Polinomial degree to smooth the signals with savgol filter\n",
+    "    - threshold (int) [default = 30]: Threshold to filter the 0 cross of the derivates of the signals\n",
+    "    - max_time_shift (int) [default = 10]: Max value of seconds to generate the cost function and find the minumum\n",
     "    \n",
     "    Return:\n",
-    "    - time_shift (float):\n",
+    "    - time_shift (float): Time shift between the exoeskeleton and robotic leg signals\n",
     "    '''\n",
     "    # Smooth the exo and leg position signal\n",
     "    exo_arr_smooth = savgol_filter(exo_knee_pos, window_size, pol_order) # window size 51, polynomial order 3\n",
@@ -807,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "impressive-witness",
+   "id": "hearing-production",
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premier-happiness",
+   "id": "executed-stopping",
    "metadata": {},
    "outputs": [],
    "source": []
