Sanity check notebook

--- a/notebooks/models/interaction_forces/XGB/xgboost.ipynb
+++ b/notebooks/models/interaction_forces/XGB/xgboost.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "explicit-plastic",
+   "id": "framed-intake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-warner",
+   "id": "western-mouse",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "objective-company",
+   "id": "wound-policy",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-reflection",
+   "id": "incorporate-voluntary",
    "metadata": {},
    "source": [
     "## Model"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "relevant-quilt",
+   "id": "accurate-indie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "civic-cholesterol",
+   "id": "silent-tyler",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aware-sailing",
+   "id": "packed-receiver",
    "metadata": {},
    "outputs": [
     {
@@ -116,20 +116,20 @@
     }
    ],
    "source": [
-    "train_samples = X_train.shape[0]\n",
-    "step = int(train_samples / 100000)\n",
-    "idx = list(range(0, train_samples, step))\n",
-    "X_train = X_train[idx, :]\n",
-    "Y_train = Y_train[idx, :]\n",
+    "# train_samples = X_train.shape[0]\n",
+    "# step = int(train_samples / 100000)\n",
+    "# idx = list(range(0, train_samples, step))\n",
+    "# X_train = X_train[idx, :]\n",
+    "# Y_train = Y_train[idx, :]\n",
     "\n",
-    "print('Train -> X: {}, Y: {}'.format(X_train.shape, Y_train.shape))\n",
-    "print('Test -> X: {}, Y: {}'.format(X_test.shape, Y_test.shape))"
+    "# print('Train -> X: {}, Y: {}'.format(X_train.shape, Y_train.shape))\n",
+    "# print('Test -> X: {}, Y: {}'.format(X_test.shape, Y_test.shape))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "plain-drill",
+   "id": "occasional-valuable",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "trained-interest",
+   "id": "usual-rover",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "usual-albuquerque",
+   "id": "confident-terminology",
    "metadata": {},
    "outputs": [],
    "source": []
