--- a/notebooks/models/interaction_forces/linear_models/Untitled.ipynb
+++ b/notebooks/models/interaction_forces/linear_models/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sunset-research",
+   "id": "dental-swimming",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-battle",
+   "id": "guided-instrumentation",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "damaged-lafayette",
+   "id": "composite-attention",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "terminal-scholar",
+   "id": "herbal-allowance",
    "metadata": {},
    "source": [
     "## Model"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "gothic-strain",
+   "id": "bright-possibility",
    "metadata": {},
    "outputs": [
     {
@@ -96,39 +96,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "residential-reason",
+   "execution_count": 4,
+   "id": "proved-motivation",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time: 11.4575\n",
-      "Train Fx MAE: 11.2775 ± 3.4866\n",
-      "Train Fx MSE: 259.7895 ± 163.8487\n",
-      "Train Fx R2: 0.1386 ± 0.0723\n",
-      "Train Fy MAE: 9.1404 ± 5.4528\n",
-      "Train Fy MSE: 249.1980 ± 279.3197\n",
-      "Train Fy R2: 0.0599 ± 0.0715\n",
-      "Train Fz MAE: 18.0691 ± 6.8765\n",
-      "Train Fz MSE: 663.8754 ± 614.7552\n",
-      "Train Fz R2: 0.1173 ± 0.0875\n",
-      "Test Fx MAE: 13.2300 ± 5.1843\n",
-      "Test Fx MSE: 353.5306 ± 287.0024\n",
-      "Test Fx R2: 0.0016 ± 0.0554\n",
-      "Test Fy MAE: 10.3156 ± 6.9224\n",
-      "Test Fy MSE: 340.7110 ± 422.1517\n",
-      "Test Fy R2: 0.0198 ± 0.0314\n",
-      "Test Fz MAE: 19.3499 ± 7.9991\n",
-      "Test Fz MSE: 823.6057 ± 904.4963\n",
-      "Test Fz R2: 0.0008 ± 0.1020\n"
+      "Train -> X: (104820, 15), Y: (104820, 24)\n",
+      "Test -> X: (161200, 15), Y: (161200, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_samples = X_train.shape[0]\n",
+    "step = int(train_samples / 100000)\n",
+    "idx = list(range(0, train_samples, step))\n",
+    "X_train = X_train[idx, :]\n",
+    "Y_train = Y_train[idx, :]\n",
+    "\n",
+    "print('Train -> X: {}, Y: {}'.format(X_train.shape, Y_train.shape))\n",
+    "print('Test -> X: {}, Y: {}'.format(X_test.shape, Y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "instant-mortgage",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time: 42.6647\n",
+      "Train Fx MAE: 10.5679 ± 3.4259\n",
+      "Train Fx MSE: 227.7914 ± 150.4241\n",
+      "Train Fx R2: 0.2524 ± 0.0883\n",
+      "Train Fy MAE: 8.6873 ± 5.2562\n",
+      "Train Fy MSE: 224.8037 ± 254.7939\n",
+      "Train Fy R2: 0.1711 ± 0.0898\n",
+      "Train Fz MAE: 16.8071 ± 6.4160\n",
+      "Train Fz MSE: 571.2945 ± 501.8593\n",
+      "Train Fz R2: 0.2344 ± 0.1045\n",
+      "Test Fx MAE: 13.3392 ± 4.7360\n",
+      "Test Fx MSE: 377.4630 ± 253.5305\n",
+      "Test Fx R2: -0.1802 ± 0.2329\n",
+      "Test Fy MAE: 11.0378 ± 7.5093\n",
+      "Test Fy MSE: 384.7738 ± 478.5655\n",
+      "Test Fy R2: -0.1330 ± 0.1521\n",
+      "Test Fz MAE: 20.6163 ± 9.0945\n",
+      "Test Fz MSE: 1090.4435 ± 1262.4685\n",
+      "Test Fz R2: -0.4018 ± 0.5295\n"
      ]
     }
    ],
    "source": [
     "params = {\n",
-    "    'alpha': 0.5\n",
+    "    'alpha': 0.0001\n",
     "}\n",
     "\n",
     "results = defaultdict(list)\n",
@@ -169,39 +195,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "closing-psychiatry",
+   "execution_count": 10,
+   "id": "enhanced-liability",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time: 88.8137\n",
-      "Train Fx MAE: 2.8867 ± 0.7143\n",
-      "Train Fx MSE: 34.1048 ± 17.0101\n",
-      "Train Fx R2: 0.8816 ± 0.0231\n",
-      "Train Fy MAE: 2.6615 ± 1.3875\n",
-      "Train Fy MSE: 33.0138 ± 30.5818\n",
-      "Train Fy R2: 0.8418 ± 0.0488\n",
-      "Train Fz MAE: 4.1498 ± 1.4302\n",
-      "Train Fz MSE: 77.6918 ± 60.9860\n",
-      "Train Fz R2: 0.8917 ± 0.0147\n",
-      "Test Fx MAE: 12.4319 ± 4.1027\n",
-      "Test Fx MSE: 351.8722 ± 224.6564\n",
-      "Test Fx R2: -0.1222 ± 0.2788\n",
-      "Test Fy MAE: 11.1945 ± 6.9356\n",
-      "Test Fy MSE: 411.1543 ± 478.4239\n",
-      "Test Fy R2: -0.2516 ± 0.2415\n",
-      "Test Fz MAE: 18.3378 ± 8.5301\n",
-      "Test Fz MSE: 876.9917 ± 951.1303\n",
-      "Test Fz R2: -0.0563 ± 0.1415\n"
+      "Training time: 12.3616\n",
+      "Train Fx MAE: 7.1672 ± 2.0189\n",
+      "Train Fx MSE: 118.7206 ± 67.2790\n",
+      "Train Fx R2: 0.5988 ± 0.0679\n",
+      "Train Fy MAE: 6.0961 ± 3.3578\n",
+      "Train Fy MSE: 111.0135 ± 111.6890\n",
+      "Train Fy R2: 0.5308 ± 0.0916\n",
+      "Train Fz MAE: 11.1107 ± 3.9863\n",
+      "Train Fz MSE: 292.3311 ± 245.6635\n",
+      "Train Fz R2: 0.6009 ± 0.0519\n",
+      "Test Fx MAE: 11.9623 ± 4.0355\n",
+      "Test Fx MSE: 311.9961 ± 201.1686\n",
+      "Test Fx R2: 0.0327 ± 0.2088\n",
+      "Test Fy MAE: 10.6152 ± 6.7882\n",
+      "Test Fy MSE: 375.4253 ± 447.9036\n",
+      "Test Fy R2: -0.0912 ± 0.1681\n",
+      "Test Fz MAE: 18.3678 ± 8.1868\n",
+      "Test Fz MSE: 819.2143 ± 877.1042\n",
+      "Test Fz R2: 0.0187 ± 0.1010\n"
      ]
     }
    ],
    "source": [
     "params = {\n",
-    "    'n_neighbors': 50\n",
+    "    'n_neighbors': 100\n",
     "}\n",
     "\n",
     "results = defaultdict(list)\n",
@@ -241,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "timely-exchange",
+   "id": "plastic-emphasis",
    "metadata": {},
    "outputs": [],
    "source": []
