--- a/notebooks/models/interaction_forces/data_preprocessing.ipynb
+++ b/notebooks/models/interaction_forces/data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "spare-hartford",
+   "id": "surgical-submission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from scipy.signal import savgol_filter\n",
     "from tqdm import tqdm\n",
     "import dask\n",
     "from dask import dataframe as dd\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-oklahoma",
+   "id": "popular-brooks",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -34,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "rising-thursday",
+   "id": "baking-mississippi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaptive-newton",
+   "id": "tested-marsh",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -61,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "clinical-absolute",
+   "id": "indie-knight",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "empty-wiring",
+   "id": "federal-frederick",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +106,8 @@
     "    '10022021': ['02', '03', '04', '05'],\n",
     "    '12022021': ['01', '02', '03', '04', '05', '06', '07'],\n",
     "    '15022021': ['02', '03', '04'],\n",
-    "    '26032021': ['01', '02', '03', '04', '06', '07', '09', '011', '012']\n",
+    "    '26032021': ['01', '02', '03', '04', '06', '07', '09', '011', '012'],\n",
+    "    '21042021': ['02', '03', '04', '05', '06', '07', '08']\n",
     "}\n",
     "\n",
     "# Exclude some experiments from the list of files to process\n",
@@ -119,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "listed-geology",
+   "id": "saving-title",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,13 +190,83 @@
     "    '''\n",
     "    idx_start = math.ceil(time_shift / data_res)\n",
     "    idx_end = total_len + idx_start\n",
-    "    return df.iloc[idx_start:idx_end].reset_index(drop=True)"
+    "    return df.iloc[idx_start:idx_end].reset_index(drop=True)\n",
+    "\n",
+    "def compute_time_shift(exo_knee_pos, leg_knee_pos, data_res=0.01, window_size=51, pol_order=3, threshold=30, max_time_shift=10):\n",
+    "    '''\n",
+    "    Find the time shift between the exo knee position and the robotic leg knee position based on the local maximas\n",
+    "    \n",
+    "    Args:\n",
+    "    - exo_knee_pos (np.array): Exoeskeleton knee position signal.\n",
+    "    - leg_knee_pos (np.array): Robotic leg knee position signal.\n",
+    "    - data_res (float) [default = 0.01]: Time resolution of the data (0.01 = 100Hz)\n",
+    "    - window_size (int) [default = 51]: Window size to smooth the signals with savgol filter\n",
+    "    - pol_order (int) [default = 3]: Polinomial degree to smooth the signals with savgol filter\n",
+    "    - threshold (int) [default = 30]: Threshold to filter the 0 cross of the derivates of the signals\n",
+    "    - max_time_shift (int) [default = 10]: Max value of seconds to generate the cost function and find the minumum\n",
+    "    \n",
+    "    Return:\n",
+    "    - time_shift (float): Time shift between the exoeskeleton and robotic leg signals\n",
+    "    '''\n",
+    "    # Smooth the exo and leg position signal\n",
+    "    exo_arr_smooth = savgol_filter(exo_knee_pos, window_size, pol_order) # window size 51, polynomial order 3\n",
+    "    leg_arr_smooth = savgol_filter(leg_knee_pos, window_size, pol_order) \n",
+    "    \n",
+    "    # Compute derivative of the signal to find de local maxima\n",
+    "    exo_dev = np.gradient(exo_arr_smooth, data_res)\n",
+    "    exo_dev_smooth = savgol_filter(exo_dev, window_size, pol_order) \n",
+    "    leg_dev = np.gradient(leg_arr_smooth, data_res)\n",
+    "    leg_dev_smooth = savgol_filter(leg_dev, window_size, pol_order)\n",
+    "    \n",
+    "    # Find the x coordinate of the maximum points\n",
+    "    exo_idx_max = []\n",
+    "    searching = False\n",
+    "    for i in range(1, exo_dev_smooth.shape[0]):\n",
+    "        # Search for a point where the gradient is decreasing before cross 0\n",
+    "        if exo_dev_smooth[i - 1] > threshold and exo_dev_smooth[i] < threshold:\n",
+    "            searching = True\n",
+    "        # Only if the gradient is decreasing from a point higher than threshold,\n",
+    "        # then search for a 0 crossing\n",
+    "        if searching and exo_dev_smooth[i - 1] > 0 and exo_dev_smooth[i] < 0:\n",
+    "            searching = False\n",
+    "            exo_idx_max.append(i)\n",
+    "\n",
+    "    leg_idx_max = []\n",
+    "    searching = False\n",
+    "    for i in range(1, leg_dev_smooth.shape[0]):\n",
+    "        # Search for a point where the gradient is decreasing before cross 0\n",
+    "        if leg_dev_smooth[i - 1] > threshold and leg_dev_smooth[i] < threshold:\n",
+    "            searching = True\n",
+    "        # Only if the gradient is decreasing from a point higher than threshold,\n",
+    "        # then search for a 0 crossing\n",
+    "        if searching and leg_dev_smooth[i - 1] > 0 and leg_dev_smooth[i] < 0:\n",
+    "            searching = False\n",
+    "            leg_idx_max.append(i)\n",
+    "\n",
+    "    # Compute the location of the max points in time scale\n",
+    "    exo_maxs = np.array(np.arange(0, len(exo_arr) * data_res, data_res)[exo_idx_max])\n",
+    "    leg_maxs = np.array(np.arange(0, len(leg_arr) * data_res, data_res)[leg_idx_max])\n",
+    "\n",
+    "    min_aux = np.min([len(exo_maxs), len(leg_maxs)])\n",
+    "\n",
+    "    exo_maxs = exo_maxs[:min_aux]\n",
+    "    leg_maxs = leg_maxs[:min_aux]\n",
+    "    \n",
+    "    time_shift_ls = np.arange(0, max_time_shift, data_res)\n",
+    "\n",
+    "    MAE_ls = []\n",
+    "    for ts in time_shift_ls:\n",
+    "        MAE_ls.append(mean_absolute_error(exo_maxs, leg_maxs - ts))\n",
+    "\n",
+    "    time_shift = time_shift_ls[np.argmin(MAE_ls)]\n",
+    "    \n",
+    "    return time_shift"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "tender-edwards",
+   "id": "incredible-particle",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +592,7 @@
     }
    ],
    "source": [
-    "for file in data_ls:\n",
+    "for file in tqdm(data_ls):\n",
     "    print('Processing file {}'.format(file))\n",
     "    exp_aux_ls = file.split('/')[-1].split('-')\n",
     "    exp_date = exp_aux_ls[-1][:8]\n",
@@ -534,8 +607,11 @@
     "    data_dict = pd.read_excel(file, sheet_name=None)\n",
     "    \n",
     "    # Extract the time shift between the exo and the robotic leg for the experiment\n",
-    "    time_shift = data_dict['Parameters'].iloc[0]['TimeShift']\n",
-    "    assert(not pd.isna(time_shift))\n",
+    "    exo_arr = data_dict['H3processed'].iloc[:, 1].values\n",
+    "    leg_arr = data_dict['Leg-Replica'].iloc[:, 3].values\n",
+    "    \n",
+    "    time_shift = compute_time_shift(exo_arr, leg_arr)\n",
+    "    assert(not np.isnan(time_shift))\n",
     "    \n",
     "    # Fix typos\n",
     "    data_dict['H3processed'].columns = (['L{}Pos'.format(a) for a in ['Hip', 'Knee', 'Ankle']] + list(data_dict['H3processed'].columns))[:-3]\n",
@@ -552,28 +628,33 @@
     "    # Apply the rotation matrix to each force vector\n",
     "    forces_ddf = dd.from_pandas(forces_df, npartitions=int(len(forces_df) / 100))\n",
     "    forces_ddf = forces_ddf.apply(rotate_row, axis=1, meta=forces_ddf)\n",
-    "    with ProgressBar():\n",
-    "        forces_df = forces_ddf.compute()\n",
+    "    forces_df = forces_ddf.compute()\n",
+    "    # with ProgressBar():\n",
+    "    #     forces_df = forces_ddf.compute()\n",
     "\n",
     "    # Correct the time shift between the data from the leg and the data from the exo\n",
+    "    forces_df = shift_leg_data(forces_df, time_shift, len(h3_df))\n",
     "    leg_df = shift_leg_data(leg_df, time_shift, len(h3_df))\n",
     "    \n",
-    "    forces_df = forces_df.iloc[:len(leg_df)]\n",
-    "    h3_df = h3_df.iloc[:len(leg_df)]\n",
+    "    # Cut data of different sources to get the same lenght\n",
+    "    max_available_data = min([len(forces_df), len(h3_df), len(leg_df)])\n",
+    "    forces_df = forces_df.iloc[:max_available_data]\n",
+    "    leg_df = leg_df.iloc[:max_available_data]\n",
+    "    h3_df = h3_df.iloc[:max_available_data]\n",
     "    assert(len(forces_df) == len(h3_df) == len(leg_df))\n",
-    "    print('Total data points: {}'.format(len(forces_df)))\n",
+    "    # print('Total data points: {}'.format(len(forces_df)))\n",
     "\n",
     "    forces_df.to_csv(save_dir + '/force_cells_processed.csv', index=False)\n",
     "    h3_df.to_csv(save_dir + '/H3_processed.csv', index=False)\n",
     "    leg_df.to_csv(save_dir + '/leg_processed.csv', index=False)\n",
     "    \n",
-    "    print('\\n')\n"
+    "    # print('\\n')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-fossil",
+   "id": "olympic-bahrain",
    "metadata": {},
    "outputs": [],
    "source": []
