Fix force selection for RF hyperparameters search

--- a/notebooks/models/interaction_forces/data_modeling.ipynb
+++ b/notebooks/models/interaction_forces/data_modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "general-fisher",
+   "id": "geographic-profit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designing-tamil",
+   "id": "running-corps",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "welsh-warren",
+   "id": "awful-repair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecological-stack",
+   "id": "manual-kansas",
    "metadata": {},
    "source": [
     "## Features and target selection"
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "mighty-correspondence",
+   "execution_count": 3,
+   "id": "african-astronomy",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       "\n",
       "\n",
       "Number of targets: 8\n",
-      "Selected targets: ['F3y', 'F3z', 'F4y', 'F4z', 'F7y', 'F7z', 'F8y', 'F8z']\n"
+      "Selected targets: ['F3x', 'F3y', 'F4x', 'F4y', 'F7x', 'F7y', 'F8x', 'F8y']\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "# features = [H3_LEG + a + m for a in ['Hip', 'Knee', 'Ankle'] for m in ['Pos', 'Vel', 'Acc', 'Torque']] + ['LegKnee{}Filtered'.format(m) for m in ['Position', 'Velocity', 'Torque']]\n",
     "# targets = ['F' + str(i + 1) + ax for i in range(N_CELLS) for ax in ['x', 'y', 'z']]\n",
     "features = ['LKneePos'] + ['F' + str(i) + 'z' for i in [3, 4, 7, 8]]\n",
-    "targets = ['F' + str(i) + ax for i in [3, 4, 7, 8] for ax in ['y', 'z']]\n",
+    "targets = ['F' + str(i) + ax for i in [3, 4, 7, 8] for ax in ['x', 'y']]\n",
     "\n",
     "print('Number of features: {}'.format(len(features)))\n",
     "print('Selected features: {}'.format(features))\n",
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "casual-yorkshire",
+   "execution_count": 4,
+   "id": "legislative-decrease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "furnished-stanley",
+   "execution_count": 5,
+   "id": "announced-charge",
    "metadata": {
     "scrolled": true
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-property",
+   "id": "governmental-settle",
    "metadata": {},
    "source": [
     "## Normalization and split for cross-validation"
@@ -521,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "geographic-trading",
+   "execution_count": 6,
+   "id": "wooden-teddy",
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +551,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "pursuant-volunteer",
+   "execution_count": 7,
+   "id": "tough-representation",
    "metadata": {},
    "outputs": [
     {
@@ -578,8 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "conceptual-cheese",
+   "execution_count": 8,
+   "id": "outer-surgeon",
    "metadata": {},
    "outputs": [
     {
@@ -614,8 +614,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "expensive-education",
+   "execution_count": 9,
+   "id": "independent-logic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "tough-interval",
+   "execution_count": 10,
+   "id": "affiliated-congo",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imperial-occasions",
+   "id": "regular-money",
    "metadata": {},
    "outputs": [],
    "source": []
