--- a/notebooks/models/interaction_forces/data_preprocessing.ipynb
+++ b/notebooks/models/interaction_forces/data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "earlier-darkness",
+   "id": "unsigned-marking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-jordan",
+   "id": "gross-diabetes",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "operational-alpha",
+   "id": "reasonable-awareness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-straight",
+   "id": "compound-brake",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "chronic-lover",
+   "id": "trying-participant",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "tropical-mechanics",
+   "id": "amber-mailman",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "combined-parallel",
+   "id": "digital-remark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,14 +266,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "african-eugene",
+   "id": "first-gabriel",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 63/63 [2:31:02<00:00, 143.85s/it]  \n"
+      "100%|██████████| 63/63 [2:37:39<00:00, 150.15s/it]  \n"
      ]
     }
    ],
@@ -291,6 +291,11 @@
     "        \n",
     "    # Load the data\n",
     "    data_dict = pd.read_excel(file, sheet_name=None)\n",
+    "    \n",
+    "    params_dict = {}\n",
+    "    params_dict['TimeShift'] = data_dict['Parameters']['TimeShift'].iloc[0] if 'TimeShift' in data_dict['Parameters'].columns else float('NaN')\n",
+    "    params_dict['SkinConfig'] = data_dict['Parameters']['SkinConfig'].iloc[0] if 'SkinConfig' in data_dict['Parameters'].columns else float('NaN')\n",
+    "    params_dict['MarchVelocity'] = data_dict['Parameters']['MarchVelocity'].iloc[0] if 'MarchVelocity' in data_dict['Parameters'].columns else float('NaN')\n",
     "    \n",
     "    # Extract the time shift between the exo and the robotic leg for the experiment\n",
     "    exo_arr = data_dict['H3processed'].iloc[:, 1].values\n",
@@ -330,6 +335,9 @@
     "    assert(len(forces_df) == len(h3_df) == len(leg_df))\n",
     "    # print('Total data points: {}'.format(len(forces_df)))\n",
     "\n",
+    "    with open(save_dir + '/parameters.json', 'w') as f:\n",
+    "        json.dump(params_dict, f)\n",
+    "    \n",
     "    forces_df.to_csv(save_dir + '/force_cells_processed.csv', index=False)\n",
     "    h3_df.to_csv(save_dir + '/H3_processed.csv', index=False)\n",
     "    leg_df.to_csv(save_dir + '/leg_processed.csv', index=False)\n",
@@ -340,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "portuguese-isaac",
+   "id": "voluntary-apparatus",
    "metadata": {},
    "outputs": [],
    "source": []
