Final RFs hyperparameters searchs

--- a/notebooks/models/interaction_forces/RF/RF_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/RF/RF_hyperparameters_search.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "<IPython.utils.io.Tee at 0x7f44046e18b0>"
+       "<IPython.utils.io.Tee at 0x7f40283b66a0>"
       ]
      },
      "execution_count": 2,
@@ -67,13 +67,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of force cells in the robotic leg\n",
-    "CELLS = [3, 4, 7, 8]\n",
+    "JOINT = 'Ankle'\n",
+    "FORCE_CELLS_PER_JOINT = {\n",
+    "    'Hip': [5, 6],\n",
+    "    'Knee': [3, 4, 7, 8],\n",
+    "    'Ankle': [1, 2]\n",
+    "}\n",
+    "\n",
+    "CELLS = FORCE_CELLS_PER_JOINT[JOINT]\n",
     "\n",
     "# Path where the results are stored\n",
     "RESULTS_PATH = '../../../../results'\n",
     "# ID of the training and validation data resulting from this notebook, stored in RESULTS_PATH\n",
-    "DATA_ID = '0009_02082021'\n",
+    "DATA_ID = '0013_09082021'\n",
     "# Number of folds for cross-validation\n",
     "CV = 4\n",
     "\n",
@@ -89,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyperparameters search date\n",
-    "hs_date = '02082021'\n",
+    "hs_date = '13082021'\n",
     "\n",
     "# Parameters grid\n",
     "param_grid = {\n",
-    "    'n_estimators': [700, 1000, 2500, 5000, 10000],\n",
+    "    'n_estimators': [700, 1000, 2500],\n",
     "    'max_depth': [13, 15, 20, 30, 50],\n",
     "    'max_features': [0.1, 0.2, 0.3, 0.5, 0.7],\n",
     "    'min_samples_leaf': [0.001, 0.0001, 0.00001],\n",
@@ -124,10 +130,10 @@
     "        print('Fold {}'.format(fold_id + 1))\n",
     "        \n",
     "        # Load data\n",
-    "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'X_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_train_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
-    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', 'Y_valid_cv{}_{}.npy'.format(fold_id + 1, DATA_ID)))\n",
+    "        X_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_X_train_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        X_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_X_valid_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        Y_train = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_Y_train_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
+    "        Y_valid = np.load(os.path.join(RESULTS_PATH, DATA_ID, 'data', '{}_Y_valid_cv{}_{}.npy'.format(JOINT, fold_id + 1, DATA_ID)))\n",
     "        \n",
     "        # Setup the model\n",
     "        model = RandomForestRegressor(**params, random_state=0, n_jobs=-1, verbose=0)\n",
@@ -170,11 +176,11 @@
     "    rd['parameters'] = params\n",
     "    rd['cv_results'] = dict(cv_results)\n",
     "    \n",
-    "    save_dir = os.path.join(RESULTS_PATH, DATA_ID, 'RF_{}'.format(hs_date))\n",
+    "    save_dir = os.path.join(RESULTS_PATH, DATA_ID, '{}_RF_{}'.format(JOINT, hs_date))\n",
     "    if not os.path.exists(save_dir):\n",
     "        os.makedirs(save_dir)\n",
     "        \n",
-    "    with open(os.path.join(save_dir, 'RF_{}_{}.json'.format(hs_date, params_id)), 'w') as fp:\n",
+    "    with open(os.path.join(save_dir, '{}_RF_{}_{}.json'.format(JOINT, hs_date, params_id)), 'w') as fp:\n",
     "        json.dump(rd, fp)\n",
     "    \n",
     "    print('\\n\\n')\n",
